--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,16 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.0.7.v20131107</version>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
         <togglz-version>2.0.0.Final</togglz-version>
         <jsf-version>2.2.2</jsf-version>
